<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>pl.symentis</groupId>
    <artifactId>java-wonderland</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Java in the Wonderland</name>
    <url>https://github.com/wsztajerowski/java-wonderland</url>

    <properties>
        <!-- common properties -->
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.compilerArgs>--enable-preview</maven.compiler.compilerArgs>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- plugin versions -->
        <maven-test-plugins.version>3.1.0</maven-test-plugins.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
        <!-- dependency versions -->
        <jmh.version>1.36</jmh.version>
        <jcstress.version>0.16</jcstress.version>
        <junit-jupiter.version>5.9.0</junit-jupiter.version>
        <assertj.version>3.23.1</assertj.version>
        <aws.java.sdk.version>2.20.100</aws.java.sdk.version>
        <mongodb-driver-sync.version>4.10.1</mongodb-driver-sync.version>
        <morphia-core.version>2.3.5</morphia-core.version>
        <picocli.version>4.7.4</picocli.version>
        <gson.version>2.10.1</gson.version>
        <gson-javatime-serialisers.version>1.1.2</gson-javatime-serialisers.version>
        <testcontainers.version>1.19.5</testcontainers.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit-jupiter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>mongodb-driver-sync</artifactId>
                <version>${mongodb-driver-sync.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.morphia.morphia</groupId>
                <artifactId>morphia-core</artifactId>
                <version>${morphia-core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fatboyindustrial.gson-javatime-serialisers</groupId>
                <artifactId>gson-javatime-serialisers</artifactId>
                <version>${gson-javatime-serialisers.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws.java.sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-test-plugins.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-test-plugins.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven-shade-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>run-maven-shade-plugin</id>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <finalName>${project.artifactId}</finalName>
                                <transformers combine.children="append">
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
                                        <addHeader>false</addHeader>
                                    </transformer>
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer"/>
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.PluginXmlResourceTransformer"/>
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
                                        <resources>
                                            <resource>.txt</resource>
                                            <resource>.MF</resource>
                                            <resource>DEPENDENCIES</resource>
                                            <resource>AL2.0</resource>
                                            <resource>LGPL2.1</resource>
                                        </resources>
                                    </transformer>
                                </transformers>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>LATEST</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>java</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <mainClass>org.adoptopenjdk.jitwatch.launch.LaunchUI</mainClass>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <modules>
        <module>dekkers-lock</module>
        <module>jmh-benchmarks</module>
        <module>stress-tests</module>
        <module>test-wrapper</module>
        <module>fake-jmh-benchmarks</module>
        <module>fake-stress-tests</module>
        <module>lamport-buffer</module>
    </modules>
</project>
